# yadrpm

./: .gitignore  CMakeLists.txt  README.md
bash-scripts/: download.sh  update-sdk-source.sh  update-sdk-sources.sh  update-sdk.sh  update.sh
config-presets/: arch-linux.conf
patches/src/discord/: types.h.patch
powershell-scripts/: download.ps1  make.ps1  update-sdk-sources.ps1  update.ps1
scripts/bash/: download.sh  make.sh  update-sdk-sources.sh  update-sdk.sh  update.sh
scripts/powershell/: download.ps1  update-sdk-sources.ps1  update-sdk.ps1  update.ps1
src/: Colors.hpp  Configuration.cpp  Configuration.hpp  DiscordChecker.cpp  DiscordChecker.h  main.cpp
src/discord/: core.cpp
src/discordTasks/: Activity.cpp  Activity.hpp  ActivityManager.cpp  ActivityManager.hpp  LobbyManager.cpp  LobbyManager.hpp  LobbyTransactionManager.cpp  LobbyTransactionManager.hpp  RelationShipManager.cpp  RelationShipManager.hpp  UserManager.cpp  UserManager.hpp  tasks.hpp
